--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/multimonth": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
+    "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
